TT#16851 Csc CF fixes and changes
What has been done:
 1. Investigate issue with "change title" field briefly visible before
    showing again. Create new task to handle this app wide.
 2. Change "ADD NEW DESTINATION" button text to "CANCEL" when active,
    and indent the button to be in line with grids
 3. Implement collapsable panel bar view for sourceset grids
 4. Remove loading icon
 5. When I am busy... field cut off at bottom for Numbers
 6. Create a new task to handle delayed hidden binds, see here:
    https://www.sencha.com/forum/showthread.php?294356-Fixing-the-lag-when-components-hidden-visible-property-is-a-bind
 X. Talked with Andreas about the highlighting of grids when moving/
    repositioning them, but decided to keep them for now

--- a/classic/sass/src/view/pages/callforward/CallForward.scss
+++ b/classic/sass/src/view/pages/callforward/CallForward.scss
@@ -70,7 +70,7 @@
     }
 }
 
-// cf-mainform timeset panel
+// cf-mainform timeset and sourceset panels
 .x-panel-cf-mainform {
     .cf-calls-during {
         margin: 7px 15px 0 0;
@@ -85,5 +85,10 @@
         background: white;
         color: $base-color;
         border: none;
+    }
+    .cf-sourceset-textfield {
+        label {
+            padding-left: 10px;
+        }
     }
 }
